# SimpleRayTracer

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  Makefile  Model.cpp  Model.h  README.md  Ray.cpp  Ray.h  Triangle.cpp  Vec3.cpp  Vertex.cpp  Vertex.h  main.cpp
include/: App.h  Camera.h  CubeMap.h  Image.h  Light.h  Material.h  MeshPool.h  Model.h  Ray.h  RenderUtils.h  Triangle.h  Vec3.h  Vertex.h
src/: App.cpp  Camera.cpp  CubeMap.cpp  Image.cpp  Light.cpp  Material.cpp  MeshPool.cpp  Model.cpp  Ray.cpp  RenderUtils.cpp  Triangle.cpp  Vec3.cpp  Vertex.cpp  main.cpp
